# SimpleSpreadsheet

./: CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp
components/: Cell.qml  Spreadsheet.qml
src/: Spreadsheet.cpp  Spreadsheet.h
